<resources>
    <string name="app_name">DesingUXUI</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_tienes_cuenta_registrate">¿No tienes cuenta? Registrate</string>
    <string name="olvidaste_tu_cuenta">¿Olvidaste tu cuenta?</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="informaci_n_personal">Información personal</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="informaci_n_telef_nica">Información telefónica</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="tel_fono_m_vil">Teléfono móvil</string>
    <string name="tel_fono_fijo">Teléfono fijo</string>
    <string name="todo">TODO</string>
    <string name="guardar">Guardar</string>
</resources>